authorization header removed from getPhoto
